# lambda/NewDish/src/main/java/com/capgemini/cca/mig/menu/model/MutationResponse.java
@@ -1,0 +1,18 @@
+package com.capgemini.cca.mig.menu.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.io.Serializable;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class MutationResponse implements Serializable {
+
+    Status status;
+    String advice;
+}
